# F1-2023-Predictions-Automation

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  gSheet_utils.py  googleSheet_resources.py  predictions_updater.py  race_schedule.json  requirements.txt  scheduler.py  scraping_utils.py  tables.py  update_sheet.py  weekly_update.py
src/secrets/: .gitignore
src/secrets2/: __init__.py
tests/: score_calculation.py
