[project]
name = "f12023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autocommand==2.2.2",
    "bs4>=0.0.2",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "gspread==6.2.0",
    "gspread-dataframe==4.0.0",
    "html5lib>=1.1",
    "idna==3.10",
    "jaraco-collections==5.1.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jaraco-text==4.0.0",
    "lxml>=5.3.1",
    "more-itertools==10.6.0",
    "numpy==2.2.4",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "platformdirs==4.3.6",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "setuptools[core]==76.0.0",
    "six==1.17.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wheel==0.45.1",
]
[project.scripts]

main = ".src.scheduler:main"
update = ".src.predictions_updater:update"
